--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 				<div class="row" style="padding: 50px 0px">
 					<div class="col-md-4">
 						<div style="height: 75%"><img class="shadow p-3 mb-5 bg-white rounded" src="images/file1.PNG"></div>
-						<a class="btn btn-primary" href="#" role="button">Preview</a>
+						<a class="btn btn-primary" href="https://fahimsahriar.github.io/Patoplace/" role="button">Preview</a>
 					</div>
 					<div class="col-md-4">
 						<div style="height: 75%"><img class="shadow p-3 mb-5 bg-white rounded" src="images/file2.PNG"></div>
-						<a class="btn btn-primary" href="#" role="button">Preview</a>
+						<a class="btn btn-primary" href="https://fahimsahriar.github.io/Tindog/" role="button">Preview</a>
 					</div>
 					<div class="col-md-4">
 						<div style="height: 75%"><img class="shadow p-3 mb-5 bg-white rounded" src="images/file3.png"></div>
